Fixed timeline rendering on iOS

--- a/site/pages/about-us/timeline-slice/content/style.css
+++ b/site/pages/about-us/timeline-slice/content/style.css
@@ -33,7 +33,7 @@
   display: block;
 }
 .copy{
-  margin: 20px 0px 0px 0px;
+  margin: 10px 0px 0px 0px;
   padding: 20px 20px 0px 20px;
 }
 
