--- a/site/pages/about-us/timeline-slice/mobileImage/style.css
+++ b/site/pages/about-us/timeline-slice/mobileImage/style.css
@@ -3,15 +3,15 @@
 @value timelineContainer from "../../../../css/_zindex.css";
 
 .mobileImage {
-  margin-bottom: 20px;  
+  
 }
 .mobileImage:after{
   content: '';
   background-color: badgerWhite;
-  width: 80%;
+  width: 90%;
   position: relative;
-  bottom: 35px;
-  height: 30px;
+  bottom: 25px;
+  height: 20px;
   display: block;
   margin: auto;
 }
